--- a/scss/app.scss
+++ b/scss/app.scss
@@ -12,6 +12,8 @@ $outer-glow: rgb(125, 228, 28);
 
 .task {
     grid-area: timer;
+    align-items: center;
+    display: flex;
 }
 
 #progress {
@@ -74,6 +76,8 @@ $outer-glow: rgb(125, 228, 28);
     }
 }
 
+#task-name { width:100%;}
+
 input {
     font-size: 20px;
     display: inline-block;
@@ -81,7 +85,8 @@ input {
     -moz-box-sizing: content-box;
     box-sizing: content-box;
     padding: 10px 20px;
-    border: 1px solid #b7b7b7;
+    margin: 0.2em;
+    border: 1px solid #6affa5;
     -webkit-border-radius: 3px;
     border-radius: 3px;
     color: $inner-glow;
@@ -95,6 +100,22 @@ input {
     -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     vertical-align: bottom;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    border: 1px solid #6affa5;
+  background-color: inherit;
+  color: $inner-glow;
+  -webkit-text-fill-color: $inner-glow;
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 .grid-container {
