--- a/scss/app.scss
+++ b/scss/app.scss
@@ -3,7 +3,7 @@ $inner-glow: rgb(182, 253, 182);
 $outer-glow: rgb(125, 228, 28);
 
 @mixin neon($inner, $outer) {
-    text-shadow: 0 0 .1em $inner, 0 0 .2em $inner, 0 0 .3em $inner, 0 0 0.4em $outer, 0 0 .7em $outer, 0 0 .8em $outer, 0 0 1.0em $outer, 0 0 15.0em $outer;
+    text-shadow: 0 0 0.1em $inner, 0 0 0.2em $inner, 0 0 0.3em $inner, 0 0 0.4em $outer, 0 0 0.7em $outer, 0 0 0.8em $outer, 0 0 1em $outer, 0 0 15em $outer;
 }
 
 .neon {
@@ -16,9 +16,24 @@ $outer-glow: rgb(125, 228, 28);
     display: flex;
 }
 
+.round {
+    background-color: black;
+
+    $width: 45px;
+
+    width: $width;
+    height: $width;
+    min-width: $width;
+    border-radius: 50%;
+    padding: 0.2rem;
+    text-indent: 3px;
+    margin: 0;
+    margin-left: 1ch;
+}
+
 @mixin text-flicker-out-glow {
-	-webkit-animation: text-flicker-out-glow 2.5s linear infinite both;
-	        animation: text-flicker-out-glow 2.5s linear infinite both;
+    -webkit-animation: text-flicker-out-glow 2.5s linear infinite both;
+    animation: text-flicker-out-glow 2.5s linear infinite both;
 }
 
 /* ----------------------------------------------
@@ -32,256 +47,316 @@ $outer-glow: rgb(125, 228, 28);
  * ----------------------------------------
  */
 @-webkit-keyframes text-flicker-out-glow {
-  0% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  13.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  14% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  14.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  15% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  22.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  23% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  24.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  25% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  34.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  35% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  39.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  40% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
-  }
-  42.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
-  }
-  43% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  44.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  45% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  50% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  54.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  55% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  69.4% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  69.5% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  69.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  70% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  79.4% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  79.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.25);
-  }
-  80% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  89.8% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  89.9% {
-    opacity: 1;
-    text-shadow: none;
-  }
-  90% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes text-flicker-out-glow {
-  0% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  13.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  14% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  14.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  15% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  22.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  23% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  24.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  25% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  34.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
-  }
-  35% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  39.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  40% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
-  }
-  42.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
-  }
-  43% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  44.9% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  45% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  50% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  54.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  55% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  69.4% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  69.5% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  69.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
-  }
-  70% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  79.4% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  79.9% {
-    opacity: 1;
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.25);
-  }
-  80% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  89.8% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  89.9% {
-    opacity: 1;
-    text-shadow: none;
-  }
-  90% {
-    opacity: 0;
-    text-shadow: none;
-  }
-  100% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    13.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    14% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    14.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    15% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    22.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    23% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    24.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    25% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    34.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    35% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    39.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    40% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
+    }
+
+    42.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
+    }
+
+    43% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    44.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    45% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    50% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    54.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    55% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    69.4% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    69.5% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    69.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    70% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    79.4% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    79.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.25);
+    }
+
+    80% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    89.8% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    89.9% {
+        opacity: 1;
+        text-shadow: none;
+    }
+
+    90% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
 
+@keyframes text-flicker-out-glow {
+    0% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    13.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    14% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    14.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    15% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    22.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.4), 0 0 110px rgba(255, 255, 255, 0.2), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    23% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    24.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    25% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    34.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35), 0 0 100px rgba(255, 255, 255, 0.1);
+    }
+
+    35% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    39.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    40% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
+    }
+
+    42.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55), 0 0 60px rgba(255, 255, 255, 0.35);
+    }
+
+    43% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    44.9% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    45% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    50% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    54.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    55% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    69.4% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    69.5% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    69.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45), 0 0 60px rgba(255, 255, 255, 0.25);
+    }
+
+    70% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    79.4% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    79.9% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.25);
+    }
+
+    80% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    89.8% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    89.9% {
+        opacity: 1;
+        text-shadow: none;
+    }
+
+    90% {
+        opacity: 0;
+        text-shadow: none;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
 
 #progress {
     align-self: center;
@@ -297,12 +372,11 @@ $outer-glow: rgb(125, 228, 28);
     i.break:before {
         content: '☕';
     }
-    
+
     i.work:before {
         content: '🔥';
     }
 }
-
 
 .nixie {
     position: relative;
@@ -359,7 +433,9 @@ $outer-glow: rgb(125, 228, 28);
     }
 }
 
-#task-name { width:100%;}
+#task-name {
+    width: 100%;
+}
 
 input {
     font-size: 20px;
@@ -385,10 +461,8 @@ input {
     vertical-align: bottom;
 }
 
-
-
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover
@@ -397,10 +471,10 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
     border: 1px solid #6affa5;
-  background-color: inherit;
-  color: $inner-glow;
-  -webkit-text-fill-color: $inner-glow;
-  transition: background-color 5000s ease-in-out 0s;
+    background-color: inherit;
+    color: $inner-glow;
+    -webkit-text-fill-color: $inner-glow;
+    transition: background-color 5000s ease-in-out 0s;
 }
 
 .grid-container {
@@ -408,7 +482,7 @@ select:-webkit-autofill:focus {
     height: 100%;
     display: grid;
     justify-items: center;
-    grid-template-columns: 1fr;    
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr auto 1fr;
     grid-template-areas: "." "timer" "progress";
 
@@ -476,8 +550,6 @@ select:-webkit-autofill:focus {
         transform: translate(-10%, 10%);
     }
 }
-
-
 
 html, body {
     background: radial-gradient(circle, #050505 0%, #010101 100%);
